--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,24 @@
 
-
-
 body {
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
-    padding: 0; /* Замінюємо окремі властивості padding на одну загальну */
-    margin: 0; /* Замінюємо окремі властивості margin на одну загальну */
-    overflow-x: hidden; /* Приховуємо горизонтальний скрол */
+    padding: 0; 
+    margin: 0; 
+    overflow-x: hidden; 
 }
-/* 
 
-
-
-
-/* Стилі для header */
 header {
    background-color: #d7d1d1;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px; /* Задайте висоту вашого header */
+    height: 80px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     display: flex;
-    align-items: center; /* Вирівняти по вертикалі */
-    justify-content: space-between; /* Рівномірно розподілити по горизонталі */
-    padding: 0 20px; /* Додайте відступи по краях */
+    align-items: center; 
+    justify-content: space-between; 
+    padding: 0 20px; 
 }
 
 /* Для мобільних пристроїв */
@@ -35,7 +28,7 @@ header {
     }
        .search-form input[type="text"] {
     /* width: 100%; */
-    width: 170px !important   ; /* Ширина пошукового поля */
+    width: 160px !important   ; /* Ширина пошукового поля */
     height: 20px;  /* Розтягуємо пошукове поле на всю ширину */
   }
 
@@ -49,10 +42,21 @@ header {
     margin-top: 70px !important; /* Змінюємо відступ у головному вмісті */
   }
 
+
+
   .modal-content {
-    width: 50vh !important; /* Змінюємо ширину модального вікна */
-    height: 50vh !important; /* Змінюємо висоту модального вікна */
+    width: 80% !important   ; /* Ширина модального вікна */
+    height: 50% !important   ; /* Висота модального вікна */
   }
+
+
+ .close {
+        display: block!important ;
+        top: 10px !important ;
+        right: 10px !important ;
+    }
+  
+
 }
 
 
@@ -85,10 +89,19 @@ header {
     margin: 0 !important;
   }
 
+  
   .modal-content {
-    width: 80%; /* Змінюємо ширину модального вікна */
-    height: 70%; /* Змінюємо висоту модального вікна */
+    width: 80% !important   ; /* Ширина модального вікна */
+    height: 70% !important   ; /* Висота модального вікна */
   }
+
+
+ .close {
+        display: block!important ;
+        top: 10px !important ;
+        right: 10px !important ;
+    }
+  
 }
 
 
@@ -132,11 +145,14 @@ a{
 .photo-card img {
     display: block;
     width: 100%;
-    height: 100%; /* Змінено на 100% */
-    object-fit: cover; /* Додано */
+    height: 100%; 
     margin: 0;
+     flex: 1; 
+    object-fit: cover;
 }
     
+
+
 .photo-card {
         position: relative;
         flex: 0 0 calc(33.33%);
@@ -150,19 +166,6 @@ a{
         justify-content: justify; /* Додано */
     }
 
-
-    .photo-card {
-    flex: 0 0 calc(33.33% - 30px); /* Розрахунок ширини карточки для відображення по три в рядок на середніх і великих екранах */
-    margin: 15px;
-    height: 200px; /* Задаємо фіксовану висоту для всіх карточок */
-    display: flex;
-    flex-direction: column;
-}
-
-.photo-card img {
-    flex: 1; /* Займати всю вільну доступну висоту у карточки */
-    object-fit: cover;
-}
 
 
 .info {
